--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Figure out trailing character thing
 Use vimgrep
 use easygrep for search/global sub
 use mini buf explorer
+figure out how to use xptemplate
